--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -21,12 +21,12 @@
 
     <TextView
         android:id="@+id/taskName_TextView_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Task name:"
+        android:text="Task Name:"
         android:textColor="#353535"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,25 +34,24 @@
 
     <EditText
         android:id="@+id/taskName_EditText_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
         android:ems="8"
-        android:hint="i.e. wash dishes"
+        android:hint="Wash Dishes"
         android:inputType="textPersonName"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AddTaskActivity" />
+        app:layout_constraintStart_toEndOf="@+id/taskName_TextView_AddTaskActivity"
+        app:layout_constraintTop_toBottomOf="@+id/addTask_TextView_AddTaskActivity" />
 
     <TextView
         android:id="@+id/taskTime_TextView_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Task time:"
+        android:text="Time (min): "
         android:textColor="#353535"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,76 +59,86 @@
 
     <EditText
         android:id="@+id/taskTime_EditText_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
         android:ems="8"
-        android:hint="i.e. 15 mins"
+        android:hint="15"
         android:inputType="number"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_AddTaskActivity" />
+        app:layout_constraintStart_toEndOf="@+id/taskTime_TextView_AddTaskActivity"
+        app:layout_constraintTop_toBottomOf="@+id/taskName_EditText_AddTaskActivity" />
 
     <TextView
         android:id="@+id/taskReward_TextView_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Task reward:"
+        android:text="Points:"
         android:textColor="#353535"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_EditText_AddTaskActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_AddTaskActivity" />
 
     <EditText
         android:id="@+id/taskReward_EditText_AddTaskActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
         android:ems="8"
-        android:hint="i.e. 10 bananas"
+        android:hint="10"
         android:inputType="textPersonName"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskReward_TextView_AddTaskActivity" />
+        app:layout_constraintStart_toEndOf="@+id/taskReward_TextView_AddTaskActivity"
+        app:layout_constraintTop_toBottomOf="@+id/taskTime_EditText_AddTaskActivity" />
 
     <TextView
         android:id="@+id/taskPhoto_TextView_AddTaskActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-medium"
         android:text="Upload Photo:"
         android:textColor="#353535"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskReward_EditText_AddTaskActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/taskReward_TextView_AddTaskActivity" />
 
     <Button
         android:id="@+id/addTask_Button_AddTaskActivity"
         android:layout_width="270dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="50dp"
         android:text="Add Task"
         android:textAllCaps="false"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/uploadPhoto_imageView_AddTaskActivity" />
 
     <ImageView
         android:id="@+id/uploadPhoto_imageView_AddTaskActivity"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="60dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskPhoto_TextView_AddTaskActivity"
         app:srcCompat="@drawable/download" />
+
+    <Button
+        android:id="@+id/back_Button_addTaskActivity"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="15dp"
+        android:onClick="backButton"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
