--- a/app/src/main/res/layout/activity_pet_create.xml
+++ b/app/src/main/res/layout/activity_pet_create.xml
@@ -57,31 +57,37 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/catImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="100dp"
+        android:onClick="selectedPet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meetPet_TextView_PetNamingActivity"
-        app:srcCompat="@drawable/catpet" />
+        app:srcCompat="@drawable/catpet"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/dogImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        android:onClick="selectedPet"
+        app:layout_constraintEnd_toStartOf="@+id/catImageView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/dogpet" />
+        app:layout_constraintTop_toTopOf="@+id/catImageView"
+        app:srcCompat="@drawable/dogpet"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/unicornImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:onClick="selectedPet"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/unicornpet" />
+        app:layout_constraintStart_toEndOf="@+id/catImageView"
+        app:layout_constraintTop_toTopOf="@+id/catImageView"
+        app:srcCompat="@drawable/unicornpet"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
