--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.RewardsActivity">
+    tools:context=".Controllers.PetActivity">
 
     <TextView
         android:id="@+id/petName_TextView_RewardsActivity"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/petImageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="60dp"
@@ -40,32 +40,38 @@
         app:srcCompat="@drawable/unicornpet" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/bananaImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="40dp"
+        android:onClick="selectedAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/banana" />
+        app:layout_constraintTop_toBottomOf="@+id/petImageView"
+        app:srcCompat="@drawable/banana"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/soapImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:onClick="selectedAction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:srcCompat="@drawable/soap" />
+        app:layout_constraintStart_toEndOf="@+id/bananaImageView"
+        app:layout_constraintTop_toTopOf="@+id/bananaImageView"
+        app:srcCompat="@drawable/soap"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/teddyBearImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView5"
+        android:onClick="selectedAction"
+        app:layout_constraintEnd_toStartOf="@+id/bananaImageView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:srcCompat="@drawable/teddybear" />
+        app:layout_constraintTop_toTopOf="@+id/bananaImageView"
+        app:srcCompat="@drawable/teddybear"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <ImageButton
         android:id="@+id/backButton"
@@ -74,8 +80,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="@color/white"
-        android:minWidth="32dp"
-        android:minHeight="32dp"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:onClick="backButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
