--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -68,11 +68,11 @@
         android:id="@+id/bananaImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="10dp"
         android:onClick="selectedAction"
-        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bananaCountTextView"
         app:srcCompat="@drawable/banana"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
@@ -80,9 +80,9 @@
         android:id="@+id/soapImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="60dp"
         android:onClick="selectedAction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bananaImageView"
         app:layout_constraintTop_toTopOf="@+id/bananaImageView"
         app:srcCompat="@drawable/soap"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -91,8 +91,8 @@
         android:id="@+id/teddyBearImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="60dp"
         android:onClick="selectedAction"
-        app:layout_constraintEnd_toStartOf="@+id/bananaImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bananaImageView"
         app:srcCompat="@drawable/teddybear"
@@ -117,31 +117,29 @@
         android:id="@+id/bearCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="75dp"
         android:text="1"
-        app:layout_constraintBottom_toTopOf="@+id/teddyBearImageView"
-        app:layout_constraintEnd_toEndOf="@+id/teddyBearImageView"
-        app:layout_constraintStart_toStartOf="@+id/teddyBearImageView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bananaCountTextView" />
 
     <TextView
         android:id="@+id/bananaCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="2"
-        app:layout_constraintBottom_toTopOf="@+id/bananaImageView"
         app:layout_constraintEnd_toEndOf="@+id/bananaImageView"
-        app:layout_constraintStart_toStartOf="@+id/bananaImageView" />
+        app:layout_constraintStart_toStartOf="@+id/bananaImageView"
+        app:layout_constraintTop_toBottomOf="@+id/cleanProgressBar" />
 
     <TextView
         android:id="@+id/soapCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="75dp"
         android:text="3"
-        app:layout_constraintBottom_toTopOf="@+id/soapImageView"
-        app:layout_constraintEnd_toEndOf="@+id/soapImageView"
-        app:layout_constraintStart_toStartOf="@+id/soapImageView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bananaCountTextView" />
 
     <ProgressBar
         android:id="@+id/happinessProgressBar"
