--- a/app/src/main/res/layout/activity_all_task.xml
+++ b/app/src/main/res/layout/activity_all_task.xml
@@ -24,7 +24,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_allTaskActivity"
         android:layout_width="400dp"
-        android:layout_height="500dp"
+        android:layout_height="550dp"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
@@ -35,12 +35,13 @@
         android:id="@+id/addActivity_Button_TasksActivity2"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:onClick="goToAddTaskActivity"
         android:text="Add Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="602dp" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView_allTaskActivity" />
 
     <TextView
         android:id="@+id/addTask_TextView_AddTaskActivity2"
