--- a/app/src/main/res/layout/activity_pet_create.xml
+++ b/app/src/main/res/layout/activity_pet_create.xml
@@ -106,4 +106,32 @@
         app:srcCompat="@drawable/unicornpet"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <ImageView
+        android:id="@+id/hamsterImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/catImageView"
+        app:layout_constraintStart_toStartOf="@+id/catImageView"
+        app:layout_constraintTop_toBottomOf="@+id/catImageView"
+        app:srcCompat="@drawable/hamsterpet" />
+
+    <ImageView
+        android:id="@+id/dragonImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/hamsterImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/hamsterImageView"
+        app:srcCompat="@drawable/dragonpet" />
+
+    <ImageView
+        android:id="@+id/pandaImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/hamsterImageView"
+        app:layout_constraintTop_toTopOf="@+id/hamsterImageView"
+        app:srcCompat="@drawable/pandapet" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
