--- a/app/src/main/res/layout/tasks_items.xml
+++ b/app/src/main/res/layout/tasks_items.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/taskImage_ImageView_AllTasksItems"
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="160dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,59 +19,59 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/minutes_TextView_TasksItems"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:text="Minutes:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AllTasksItems" />
-
-    <TextView
         android:id="@+id/taskTime_TextView_TasksItems"
         android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Time"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/minutes_TextView_TasksItems"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AllTasksItems" />
-
-    <TextView
-        android:id="@+id/taskReward_TextView_TasksItems2"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
-        android:text="Points:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_TasksItems" />
 
     <TextView
         android:id="@+id/points_TextView_TasksItems"
-        android:layout_width="112dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Reward"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/taskReward_TextView_TasksItems2"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_TasksItems" />
 
     <TextView
         android:id="@+id/taskName_TextView_AllTasksItems"
         android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="4dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:text="Task Name"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
+        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AllTasksItems"
+        app:srcCompat="@drawable/timer_icon_153935" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:srcCompat="@drawable/star_icon_stylized_svg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
