--- a/app/src/main/res/layout/tasks_items.xml
+++ b/app/src/main/res/layout/tasks_items.xml
@@ -49,6 +49,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:text="Task Name"
+        android:textColor="@color/dark_cyan"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
